# nec2c

./: .gitignore  Makefile.am  Makefile.in  ProjectHome.md  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.3  traces.4
doc/: README.new
src/: Makefile.am  Makefile.in  calculations.c  config.h  config.h.in  configure.in  fields.c  geometry.c  ground.c  input.c  main.c  matrix.c  misc.c  nec2c.h  network.c  radiation.c  somnec.c
